[gd_scene load_steps=7 format=3 uid="uid://oyin7jlbraup"]

[ext_resource type="Theme" uid="uid://boqtjf88xcpu4" path="res://demo/assets/ui.theme" id="1_a4hw6"]
[ext_resource type="Script" uid="uid://bdw71lgb3vkq0" path="res://ui/one_vs_all_screen_ui.gd" id="2_q4hpc"]
[ext_resource type="Texture2D" uid="uid://idc6vecuukpg" path="res://assets/ui/box-bg_prim_3-256.jpg" id="2_xmq81"]
[ext_resource type="FontFile" uid="uid://cbahwq4mtyvj7" path="res://assets/fonts/vipnagorgialla/Vipnagorgialla Bd.otf" id="3_xmq81"]

[sub_resource type="LabelSettings" id="LabelSettings_exrx5"]
font = ExtResource("3_xmq81")
font_size = 24
font_color = Color(0.4359888, 0.0002556224, 2.1658838e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xmq81"]
font = ExtResource("3_xmq81")
font_size = 24
font_color = Color(0.00028264784, 0, 0.47877586, 1)

[node name="OneVSAllScreenUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_a4hw6")
script = ExtResource("2_q4hpc")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 320.0
offset_bottom = 120.0
texture = ExtResource("2_xmq81")
expand_mode = 3

[node name="FlowContainer" type="VFlowContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 273.0
offset_bottom = 96.0

[node name="YouPoints" type="Label" parent="TextureRect/FlowContainer"]
layout_mode = 2
text = "You 23"
label_settings = SubResource("LabelSettings_exrx5")

[node name="OtherPoints" type="Label" parent="TextureRect/FlowContainer"]
layout_mode = 2
text = "Other 47"
label_settings = SubResource("LabelSettings_xmq81")
